Bug 479055 - KWin effects show up as black on embedded devices
Summary: KWin effects show up as black on embedded devices
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git master
Platform: Other Linux
: NOR major
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-12-27 04:31 UTC by Devin Lin
Modified: 2024-01-12 09:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Logs from KWin when opening the task switcher (717 bytes, text/plain)
2023-12-27 04:31 UTC, Devin Lin
Details
video showing the screen going black when taskswitcher is invoken (pmOS edge, kde-nightly, op6-enchilada) (546.49 KB, video/mp4)
2024-01-10 17:09 UTC, Marco Mattiolo
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Devin Lin 2023-12-27 04:31:05 UTC
Created attachment 164463 [details]
Logs from KWin when opening the task switcher

SUMMARY
On the Plasma Mobile Nightly branches of postmarketOS (https://wiki.postmarketos.org/wiki/Nightly), the task switcher (KWin effect) shows up as a black screen.

I currently suspect that Qt 6 compiled with OpenGL ES2 (https://git.alpinelinux.org/aports/tree/community/qt6-qtbase/APKBUILD) triggers this issue.

STEPS TO REPRODUCE
1. Run Plasma Desktop or Plasma Mobile on postmarketOS on an ARM device
2. Open a KWin effect

OBSERVED RESULT
The screen is black

EXPECTED RESULT
The effect displays

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 6.6

ADDITIONAL INFORMATION
See logs attached
Comment 1 Marco Mattiolo 2024-01-10 17:09:23 UTC
Created attachment 164792 [details]
video showing the screen going black when taskswitcher is invoken (pmOS edge, kde-nightly, op6-enchilada)
Comment 2 Bug Janitor Service 2024-01-10 19:57:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4866
Comment 3 Zamundaaa 2024-01-10 20:29:32 UTC
Git commit a05a6d8727e0644106e38191b2aeb26270a23dbd by Xaver Hugl.
Committed on 10/01/2024 at 20:56.
Pushed by zamundaaa into branch 'master'.

effect/offscreenquickview: always use GL_RGBA8

GL_RGB8 isn't supported by OpenGL ES

M  +1    -1    src/effect/offscreenquickview.cpp

https://invent.kde.org/plasma/kwin/-/commit/a05a6d8727e0644106e38191b2aeb26270a23dbd
Comment 4 Zamundaaa 2024-01-12 09:19:27 UTC
Git commit bce104708096f754ef091aec9a1bd4b71c0b2edc by Xaver Hugl.
Committed on 10/01/2024 at 23:47.
Pushed by vladz into branch 'Plasma/6.0'.

effect/offscreenquickview: always use GL_RGBA8

GL_RGB8 isn't supported by OpenGL ES


(cherry picked from commit a05a6d8727e0644106e38191b2aeb26270a23dbd)

M  +1    -1    src/effect/offscreenquickview.cpp

https://invent.kde.org/plasma/kwin/-/commit/bce104708096f754ef091aec9a1bd4b71c0b2edc