effect/offscreenquickview: always use GL_RGBA8

GL_RGB8 isn't supported by OpenGL ES

BUG: 479055


(cherry picked from commit a05a6d8727e0644106e38191b2aeb26270a23dbd)